# ProcScope

./: .gitignore  CMakeLists.txt  README.md
include/: procscope_reader.h  scope_manager.h  ui.h
src/: main.cpp  procscope_reader.cpp  scope_manager.cpp  ui.cpp
